Major Update to Chapter 12's Web Crawler
 - Updated URLs to use URI instead.  URLs construction is deprecated now.
 - Formatted files
 - Simplified formatted strings.
 - updated method names to be more descriptive of what they actually do.
 - Added comments to code to explain what is going on.
 - Refactored larger methods into more understandable ones.